--- a/tox.ini
+++ b/tox.ini
@@ -11,4 +11,4 @@ commands =
     python setup.py --quiet clean develop
     coverage run --parallel-mode -m pytest
     coverage combine --append
-    coverage report -m
+    coverage report -m --include='redeclipse*'
