--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,9 @@
 envlist =
     py35,
 
+[flake8]
+ignore = E501,E116
+
 [testenv]
 passenv = *
 deps =
@@ -11,4 +14,4 @@ commands =
     python setup.py --quiet clean develop
     coverage run --parallel-mode -m pytest
     coverage combine --append
-    coverage report -m --include='redeclipse*'
+    coverage report -m --include='redeclipse*' --omit='redeclipse/cli/*'
