--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: python
 python:
-- '3.3'
+- '3.5'
 
 script:
- - pip install flake8
+ - pip install flake8 tox
  - flake8 redeclipse
  - tox
