--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,6 @@ deps =
     pytest
 commands =
     python setup.py --quiet clean develop
-    coverage run --parallel-mode -m pytest
+    coverage run --parallel-mode -m pytest {posargs}
     coverage combine --append
     coverage report -m --include='redeclipse*' --omit='redeclipse/cli/*'
